--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-tailwind/react": "^2.1.9",
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.7",
+    "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.3",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
