--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "flowbite-react": "^0.7.3",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.22.3",
